# UEA-ML_SRCNN

./: .gitignore  SRCNN.ipynb  install_datasets.py  pyproject.toml  requirements.txt  train.ipynb
